Banner change for mobile

--- a/WageCalculatorBackend/wwwroot/index.html
+++ b/WageCalculatorBackend/wwwroot/index.html
@@ -14,5 +14,5 @@
 </style><link rel="stylesheet" href="styles-PUZ6YMGD.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-PUZ6YMGD.css"></noscript></head>
 <body class="mat-typography">
   <app-root></app-root>
-<script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-R5ABMNXE.js" type="module"></script></body>
+<script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-UOAMHT7Z.js" type="module"></script></body>
 </html>
